feat(role.controller.ts): implement role addition
